--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/datasets/evaluation/images/
-/datasets/test/images/
-/datasets/training/images/
+/datasets/**/*.png
+/datasets/**/*.png
+/datasets/**/*.png
