Add python dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
+torch==2.1.0
+lightning==2.1.0
+pandas==2.1.1
 datasets==2.14.5
 datasets[vision]==2.14.5
-evaluate==0.4.1
-flask==3.0.0
-huggingface-hub==0.17.3
-numpy==1.26.1
-pandas==2.1.1
-torch==2.1.0
-torchvision==0.16.0
-tqdm==4.66.1
 transformers==4.34.0
 transformers[torch]==4.34.0
+tqdm==4.66.1
+pandas==2.1.1
+torchvision==0.16.0
+evaluate==0.4.1
+flask==2.0.2
+flask_cors==3.0.10
